--- a/application.properties
+++ b/application.properties
@@ -29,3 +29,9 @@ app.jumps.binding.name=jumps-out-0
 spring.cloud.stream.bindings.jumps-out-0.destination=wuawsebe-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=wuawsebe-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.group=wuawsebe-jumps-notifier
+
+# Redis configuration
+spring.data.redis.host=redis-13294.c6.eu-west-1-1.ec2.cloud.redislabs.com
+spring.data.redis.port=13294
+spring.data.redis.username=default
+spring.data.redis.password=${REDIS_PASSWORD}
