--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 # Common configuration
 logging.level.telran=trace
+email-provider-port=8080
+
 # Mongodb configuration
 spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.uovkc8l.mongodb.net/college?retryWrites=true&w=majority
 
