--- a/jumps-email-notifier.properties
+++ b/jumps-email-notifier.properties
@@ -6,3 +6,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.debug=true
 app.email.provider.port=${email-provider-port}
+app.email.provider.host=${DATA_PROVIDER_HOST:localhost}
