--- a/gateway.properties
+++ b/gateway.properties
@@ -1,2 +1,3 @@
 app.routed.urls={pulse:'http://pulse-values-back-office:9090',data:'http://email-data-provider:8080'}
 server.port=9292
+app.accounts.admin.password=12345.com
